        before next stable release):
    - add data-driven factory system
    - move more game logic to tags [WIP]
    - refactor event names [WIP]
    - do not read inventory config for each inventory, load it ones & share
    - add scoreboards with commands, execute command entry, ...
    - make world gen more fail-save
    - add ores
    - tool level system based on tags were every block has a) a tag for the tool type and b) a tag for tool level
        [tags exists by vanilla]

    - add an line into logging where the system searches for the location where the error occur and will link the mod
        caused it into the log

    - parser for the new mc world gen config format

    - add an mode where the window opens only when the load is complete

    - add TranslationComponent-class supported by buttons, labels, ... to dynamic cache the translation

    - upgrade to pyglet 2:
        - implement glsl language adapter (see https://www.pythonstuff.org/glsl/example_2_glsl_with_pyglet.html)
        - implement lighting [1000]
        - rendering layer system [20]
        - rendering helper class for setting up things like 3d rendering, alpha usage, ... [more functionality]

    - launcher system to download mc assets separately [MP4-12]
    - entity AI system
    - make loot table system only load needed loot tables, etc.
    - BlockItemGenerator should be replaced by an in-game block renderer

information on development:
    - the development is split up into 2 phases: the dev-branch with changes to the code and the final releases pushed
        to release-branch and published as a release on github
    - developing happens also on feature branches were bigger features can be tested. It is not guaranteed that any
        if this features will make its way into the final release.
    - PR's should target dev or in some cases the feature branches, only for critical bug fixes the release-branch