@@ -39,41 +39,50 @@ import mcpython.util.texture
 from mcpython import logger, shared
 
 """
-specifications for the resource loader system
+---------------------------------------------
+Specifications for the resource loader system
+---------------------------------------------
 
-On startup / on reload, so called ResourceLocations are created for every archive / directory in resourcepack-folder
+On startup / on reload, so called ResourceLocation's are created for every archive / directory in resourcepack-folder
+and other asset sources (mod files)
 
 functions to access data:
     to_filename(representation: str) -> str: returns the transformed name (for example block/dirt gets 
         assets/minecraft/textures/block/dirt.png)
     exists(filename: str) -> bool: returns if an directory exists somewhere
-    read(filename: str, mode=select from None for bytes, "json", "pil", "pyglet") -> object: loads the file
+    read_<xy>(filename: str) -> object: loads the file in the speicified mode
 
 How mods do interact with these?
     Mod files are automatically added to these system to make it easier to add own resources
+
+There is a special class for simulating files in-memory 
 """
 
 
 class IResourceLoader(ABC):
     """
-    Base class for an class holding an link to an resource source, like and directory or zip-file
+    Base class for a class holding a link to a resource source, like and directory or zip-file
+    (but in theory can be anything, even over network)
     """
 
     @staticmethod
     def is_valid(path: str) -> bool:
         """
-        checks if an location is valid as an source
+        Checks if a location is valid as a source to load via the constructor
         :param path: the path to check
         :return: if it is valid or not
         """
         raise NotImplementedError()
 
     def get_path_info(self) -> str:
+        """
+        Returns a unique identifier for this loader, like a path loaded from, or some mod name
+        """
         raise NotImplementedError()
 
     def is_in_path(self, path: str) -> bool:
         """
-        checks if an local file-name is in the given path
+        Checks if a local file-name is in the given path, so it can be loaded
         :param path: the file path to check
         :return: if it is in the path
         """
@@ -81,7 +90,7 @@ class IResourceLoader(ABC):
 
     def read_raw(self, path: str) -> bytes:
         """
-        will read an file into the system in binary mode
+        Will read a file in binary mode
         :param path: the file name to use
         :return: the content of the file loaded in binary
         """
@@ -89,7 +98,7 @@ class IResourceLoader(ABC):
 
     def read_image(self, path: str) -> PIL_Image.Image:
         """
-        will read an file into the system as an PIL_Image.Image
+        Will read a file as a PIL.Image.Image
         :param path: the file name to use
         :return: the content of the file loaded as image
         """
@@ -97,9 +106,9 @@ class IResourceLoader(ABC):
             f.write(self.read_raw(path))
         return PIL_Image.open(shared.tmp.name + "/resource_output.png")
 
-    def read_decoding(self, path: str, encoding: str) -> str:
+    def read_decoding(self, path: str, encoding: str = "utf-8") -> str:
         """
-        will read an file into the system as an string
+        Will read a file into the system as a string, decoding the raw bytes in the given encoding
         :param path: the file name to use
         :param encoding: the encoding to use
         :return: the content of the file loaded as string
@@ -109,17 +118,18 @@ class IResourceLoader(ABC):
     def close(self):
         """
         Called when the resource path should be closed
+        Should be used for cleanup
         """
-        pass
 
     def get_all_entries_in_directory(
         self, directory: str, go_sub=True
     ) -> typing.Iterator[str]:
         """
-        Should return all entries in an local directory
+        Should return all entries in a local directory
         :param directory: the directory to check
         :param go_sub: if sub directories should be iterated or not
-        :return: an list of data
+        :return: a list of data
+        todo: add a regex variant
         """
         raise NotImplementedError()
 
@@ -303,13 +313,14 @@ RESOURCE_PACK_LOADERS = [
     ResourceZipFile,
     ResourceDirectory,
 ]
-RESOURCE_LOCATIONS = []  # an list of all resource locations in the system
+RESOURCE_LOCATIONS = []  # a list of all resource locations in the system
 # todo: add manager class for this
 
 
 def load_resource_packs():
     """
     Will load the resource packs found in the paths for it
+    todo: add a way to add resource locations persistent to reloads
     """
 
     close_all_resources()
@@ -586,7 +597,7 @@ def get_all_entries_special(directory: str) -> typing.Iterator[str]:
     return itertools.chain.from_iterable(
         map(
             lambda x: map(
-                lambda s: "@{}|{}".format(x.path, s),
+                lambda s: "@{}|{}".format(x.get_path_info(), s),
                 x.get_all_entries_in_directory(directory),
             ),
             RESOURCE_LOCATIONS,
