@@ -10,7 +10,7 @@ planned for the future (in "[]", priority, with 1 the highest and positive inf l
     - do not read inventory config for each inventory, load it ones & share
     - add scoreboards with commands, execute command entry, ...
     - make world gen more fail-save
-    - add ores
+    - add ores & their gen
     - tool level system based on tags were every block has a) a tag for the tool type and b) a tag for tool level
         [tags exists by vanilla]
 
@@ -53,7 +53,13 @@ information on development:
 
 
 changelog of snapshot <21w27a> released on <?> targeting <1.17.1?>
+    JVM:
+        - a lot smaller stuff, fixes, more integration work
 
+    Mod Loader:
+        - rewritten initial discovery system
+        - mods can now provide mod loaders, finally (before, mods where to late to do stuff)
+        - mod loading order is no longer stable without dependencies
 
 
 changelog of snapshot 21w23a released on 9.6.2021 targeting 1.17
